Fixed header misalignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,16 +3,20 @@ body {
   margin: 100px auto;
 }
 h1 {
-  font-size: 80px;
+  font-size: 70px;
   margin: 0 auto;
+  text-align: center;
 }
 h2 {
   font-size: 40px;
-  margin: 5px auto;
+  margin: 10px auto;
+  text-align: center;
 }
 h3 {
   color: #4d4d4d;
   margin-top: 8px;
+  text-align: center;
+  opacity: 0.7;
 }
 
 :root {
@@ -79,7 +83,7 @@ h3 {
   text-decoration: none;
 }
 p {
-  font-size: 16px;
+  font-size: 18px;
   margin-top: 0;
 }
 
